--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,3 +1,9 @@
+/*
+* @Author: henry yan
+* @Date:   2016-10-19 16:47:00
+* @Last Modified by:   henry yan
+* @Last Modified time: 2016-10-19 16:47:00
+*/
 /*公用样式的定义*/
 * {
   padding: 0;
