--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,9 @@
+/*
+* @Author: henry yan
+* @Date:   2016-10-19 16:47:00
+* @Last Modified by:   henry yan
+* @Last Modified time: 2016-10-19 16:47:00
+*/
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300);
 
 html, #app {
