--- a/src/assets/css/variable.scss
+++ b/src/assets/css/variable.scss
@@ -1,3 +1,9 @@
+/*
+* @Author: henry yan
+* @Date:   2016-10-19 16:47:00
+* @Last Modified by:   henry yan
+* @Last Modified time: 2016-10-19 16:47:00
+*/
 $fontSize-s: .6rem;
 $fontSize-m: .7rem;
 $fontSize-b: .8rem;
